# gmail_cleaner_agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN-TESTING.md  PLAN.md  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
prompts/: classifier_system.md
src/cleanmail/: classifier.py  config.py  engine.py  gateway.py  gmail_client.py  logging_setup.py  main.py  models.py  policies.py  reporter.py  scheduler.py  storage.py
tests/: conftest.py  test_config.py  test_engine.py  test_engine_gateway.py  test_models.py  test_policies.py  test_reporter.py  test_storage.py
